--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires = [
     "setuptools>61.0",
     "wheel",
     "dash",
-    "dash-bootstrap-components"
+    "waitress"
 ]
 
 build-backend = "setuptools.build_meta"
