--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ requires = [
     "setuptools>61.0",
     "wheel",
     "dash",
-    "waitress"
+    "waitress",
+    "pyyaml"
 ]
 
 build-backend = "setuptools.build_meta"
